templates/termbox_template.yaml
---
# Source: termbox/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: termbox-release-name
  labels:
    app: termbox
    chart: termbox-0.1.11
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: termbox
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 3030
        protocol: TCP
      - port: 9102
        protocol: TCP
---
# Source: termbox/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: termbox-release-name
  labels:
    app: termbox
    chart: termbox-0.1.11
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: termbox
    release: release-name
    routed_via: release-name
  ports:
  - name: http
    protocol: TCP
    port: 3030
---
# Source: termbox/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: termbox-release-name
  labels:
    app: termbox
    chart: termbox-0.1.11
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: termbox
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: termbox
        release: release-name
        routed_via: release-name
      annotations:
        checksum/config: bf8b37d6272a1e57708b1b287afe0430fe7e41c08a16204785217a4d0c805761
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"        
    spec:
      containers:
        # The main application container
        - name: termbox-release-name
          image: "docker-registry.wikimedia.org/wikimedia/wikibase-termbox:latest"
          command: ["node"]
          args: ["serverBuild/src/server/service-runner-entrypoint.js", "-c", "/etc/termbox/config.yaml"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3030
          livenessProbe:
            tcpSocket:
              port: 3030
          readinessProbe:
            httpGet:
              path: /_info
              port: 3030
          volumeMounts:
            - name: config-volume
              mountPath: /etc/termbox
          resources:
            requests:
              cpu: 1m
              memory: 140Mi
            limits:
              cpu: 1
              memory: 300Mi        
      volumes:
        
        - name: config-volume
          configMap:
            name: config-release-name
---
# Source: termbox/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'termbox-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'termbox-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(TERMBOX_RELEASE_NAME_SERVICE_HOST)', 'http://termbox-release-name:3030']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
